--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -4,8 +4,19 @@
     	<div class="footer-left">
     		&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
     	</div>
+
+<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js">
+</script>
+<span id="busuanzi_container_site_pv">
+    本站总访问量<span id="busuanzi_value_site_pv" style="color: blue;"></span>次
+</span>
+<span>| </span>
+<span id="busuanzi_container_site_uv">
+  访客数<span id="busuanzi_value_site_uv" style="color: blue;"></span>人次
+</span>
+
       	<div class="footer-right">
-      		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten
+      		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten & noodle-xia
       	</div>
     </div>
   </div>
